Styles for tasks

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -149,7 +149,7 @@ form.reopen,form.convert_comment
 form.convert_comment
   :background rgb(255,255,220)
   :border 1px solid rgb(200,200,120)
-  :padding 20px
+  padding: 20px
   :margin-bottom 15px
   h2
     margin: 0px
