--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -132,14 +132,14 @@ div.column
       margin-left: -18px
       cursor: move
     .inner
-      :padding	
+      padding:	
         top: 4px
         bottom: 4px
     .taskStatus
       text-align: right
       float: left
       width: 30px
-      :padding
+      padding:
         left: 20px
       span
         display: block
@@ -222,7 +222,7 @@ div.column
         display: inline
 
 div.tasks
-  :padding-top 3px
+  padding-bottom: 5px
 
 table.task_list_closed
   margin-top: 10px
@@ -243,7 +243,7 @@ table.task_list_closed
   a
     color: rgb(255,255,255)
   span
-    :padding
+    padding:
       left: 2px
       right: 0px
 .active_new
@@ -264,8 +264,8 @@ table.task_list_closed
 
 .new_task
   font-size: 11px
-  :padding
-    top: 10px
+  padding:
+    top: 5px
     left: 50px
   a
     color: rgb(100,100,100)
@@ -273,7 +273,7 @@ table.task_list_closed
 
 .show_archived_tasks
   font-size: 11px
-  :padding
+  padding:
     top: 6px
     left: 50px
   a
