--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -246,14 +246,14 @@ div.task_list, div.task_list_closed
     display: none
   .task
     .inner
-      :padding	
+      padding:	
         top: 4px
         bottom: 4px
     .taskStatus
       text-align: right
       float: left
       width: 30px
-      :padding
+      padding:
         left: 20px
       span
         display: block
