--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -1,8 +1,11 @@
 =label-styles
   display: block
   font-size: 12px
+  font-weight: bold
   padding-bottom: 5px
-  em
+  em, i
+    margin-left: 10px
+    font-size: 10px
     font-style: normal
     color: #999
 
