--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -107,7 +107,7 @@ h2
         weight: bold
       height: 22px
       line-height: 20px
-      width: 30%
+      width: 23%
       margin:
         left: 2%
         top: 2px
@@ -142,8 +142,8 @@ h2
           float: right
           font-size: 10px
           color: #999999
-    #projects, #conversations, #people
-      div.project, div.conversation, div.person
+    #projects, #conversations, #people, #pages
+      div.project, div.conversation, div.person, div.project_page
         font-size: 16px
         display: block
         border-bottom: 1px solid #dddddd
@@ -443,6 +443,181 @@ span.task_status, span.current_task_status
 
 img.drag
   display: none
+
+div.pageSlot
+  padding: 5px 0px
+  padding-left: 46px
+  margin-left: -46px
+  padding-bottom: 10px
+
+div.divider
+  background: url(../images/divider.jpg) repeat-x center
+  padding-left: 10px
+  h3
+    padding-top: 3px
+    span
+      background: rgb(255, 255, 255)
+      padding: 0px 5px
+  p.actions
+    float: right
+    margin: 0px
+    a.delete
+      color: red
+  p.handle
+    position: relative
+    margin: 0px
+    float: none
+    span
+      background: rgb(255, 255, 255)
+      -moz-border-radius: 4px
+      -webkit-border-radius: 4px
+      padding: 3px 0px
+      left: 2px
+      bottom: 0px
+      position: absolute
+      display: block
+      width: 32px
+      height: 18px
+      left: -32px
+      top: 2px
+      img
+        cursor: move
+
+div.note
+  p.actions
+    float: right
+    margin: 0px
+    a.delete
+      color: red
+  p.handle
+    position: relative
+    margin: 0px
+    float: none
+    span
+      background: rgb(255, 255, 255)
+      -moz-border-radius: 4px
+      -webkit-border-radius: 4px
+      padding: 3px 0px
+      left: 2px
+      bottom: 0px
+      position: absolute
+      display: block
+      width: 32px
+      height: 18px
+      left: -32px
+      top: 2px
+      img
+        cursor: move
+
+div.upload
+  padding: 15px 0px
+  border:
+    top: 1px solid white
+    bottom: 1px solid white
+  margin: 0px
+    left: 6px
+  .info
+    width: 60px
+    padding-right: 10px
+    float: left
+    a
+      display: block
+      text-align: center
+      text-transform: uppercase
+      background: rgb(100, 100, 100)
+      color: rgb(255, 255, 255)
+      font-size: 16px
+      padding: 3px 0px
+        top: 14px
+      width: 48px
+      height: 28px
+      margin-left: 6px
+      -moz-border-radius: 5px
+      -webkit-border-radius: 5px
+      letter-spacing: 0.1em
+      font-family: Georgia
+    a.jpg, a.gif, a.png, a.tga, a.tiff, a.eps, a.bmp
+      background: rgb(11, 183, 182)
+    a.xls, a.xlsx
+      background: rgb(94, 148, 48)
+    a.txt, a.c, a.cpp, a.css, a.dat, a.exe, a.h, a.hpp, a.html, a.java, a.php, a.py, a.rb, a.rtf, a.sql, a.xml, a.yml
+      color: rgb(87, 107, 116)
+      background: rgb(215, 224, 229)
+    a.rar, a.tzg, a.zip, a.iso, a.dmg
+      background: rgb(222, 185, 54)
+    a.avi, a.flv, a.qt, a.mp4, a.mov, a.mpg
+      background: rgb(157, 71, 154)
+    a.aac, a.aiff, a.mid, a.mp3, a.wav
+      background: rgb(98, 95, 155)
+    a.pdf, a.ics
+      background: rgb(202, 33, 39)
+    a.doc, a.odt, a.ott
+      background: rgb(24, 93, 128)
+    a.psd
+      background: rgb(0, 111, 148)
+    a.ai
+      background: rgb(216, 71, 108)
+    a.key, a.odf, a.otp, a.ppt
+      background: rgb(214, 103, 39)
+    a.dotx, a.ods, a.ots
+      background: rgb(105, 161, 53)
+    a.dxf, a.dwg
+      background: rgb(12, 164, 227)
+  .block
+    float: left
+    .description
+      color: #999999
+      font-style: italic
+    .name
+      font-size: 12px
+      margin-bottom: 5px
+      border-bottom: solid 1px rgb(235, 235, 235)
+      a
+        font-size: 12px
+        font-weight: bold
+    .date
+      font-size: 10px
+      color: rgb(180, 180, 180)
+    .body
+      font-size: 12px
+
+body.show_pages
+  div.page_header
+    display: block
+    margin-bottom: 10px
+    .text_actions
+      margin-top: 5px
+      float: right
+      font-size: 12px
+      color: rgb(200, 200, 200)
+      a
+        text-decoration: underline
+    .description
+      font-size: 12px
+      color: rgb(180, 180, 180)
+  h3
+    font-size: 18px
+    margin: 0px
+  h2
+    border-bottom: 2px solid rgb(240, 240, 240)
+    font-size: 20px
+    font-weight: normal
+    margin-bottom: 1em
+    margin-top: 10px
+    padding-bottom: 3px
+  p
+    font-size: 12px
+    line-height: 1.4em
+  .buttons
+    padding: 6px 10px
+    -moz-border-radius: 8px
+    -webkit-border-radius: 8px
+  div.upload
+    .block
+      .date
+        margin-right: 4px
+    .actionContainer
+      display: none
 
 #footer
   border-top: 1px solid #bdbfc4
