Briefer signup screen

--- a/app/styles/_base.sass
+++ b/app/styles/_base.sass
@@ -24,6 +24,8 @@ a:hover
 
 div.fieldWithErrors
   display: inline
+  font-weight: normal
+  color: red
 
 .index_task_lists, .show_projects
   .banner
