--- a/app/views/users/_form.haml
+++ b/app/views/users/_form.haml
@@ -3,29 +3,32 @@
 - sub_action = @sub_action
 
 - if user.new_record? or sub_action != nil
-  - if user.new_record? or sub_action == 'settings'
-    .login.text_field
-      = f.label :login, t('.login')
-      = errors_for user, :login
-      = f.text_field :login
-      - tooltip t('.tooltips.login')
   - if user.new_record? or sub_action == 'profile'
     .first_name.text_field
       = f.label :first_name, t('.first_name')
+      = f.text_field :first_name, :autofocus => 'autofocus'
       = errors_for user, :first_name
-      = f.text_field :first_name
       - tooltip t('.tooltips.first_name')
     .last_name.text_field
       = f.label :last_name, t('.last_name')
-      = errors_for user, :last_name
       = f.text_field :last_name
-    - tooltip t('.tooltips.last_name')
+      = errors_for user, :last_name
+      - tooltip t('.tooltips.last_name')
+  - if user.new_record? or sub_action == 'settings'
+    .login.text_field
+      = f.label :login, t('.login')
+      = f.text_field :login
+      = errors_for user, :login
+      - tooltip t('.tooltips.login')
   - if user.new_record? or sub_action == 'settings'
     .email.text_field
       = f.label :email, t('.email')
+      - if @invitation
+        = f.text_field :email, :value => 'asdad', :readonly => 'readonly', :style => 'color: #999'
+      - else
+        = f.text_field :email
+        - tooltip t('.tooltips.email')
       = errors_for user, :email
-      = f.text_field :email
-      - tooltip t('.tooltips.email')
 
     - if @invitation
       .use_this_email{ :style => 'margin: 10px; padding: 10px; border: 1px rgb(220,220,150) solid; background-color: rgb(255,255,200)' }
@@ -38,23 +41,24 @@
   #password_fields{ :style => user.new_record?? '' : 'display: none' }
     .password.text_field
       = f.label :password, t('.password')
-      = errors_for user, :password
       = f.password_field :password, :autocomplete => 'off'
+      = errors_for user, :password
       - unless sub_action == 'settings'
         = password_strength :password_strength, 'user_password'
         - tooltip t('.tooltips.password')
     .password.text_field
       = f.label :password_confirmation, t('.confirm_password')
-      = errors_for user, :password_confirmation
       = f.password_field :password_confirmation, :autocomplete => 'off'
+      = errors_for user, :password_confirmation
 
 - if user.new_record?
   - build_user_phone_number(user)
   - f.fields_for :card do |card|
     - card.fields_for :phone_numbers do |phone|
       .phone_number.text_field
-        = phone.label :name, t('cards.field.add_phone_numbers')
+        = phone.label :name, t('.phone')
         = phone.text_field :name
+        .field_note= t('.phone_for_integration')
         - tooltip t('.tooltips.phone')
 - else
   - if sub_action == 'settings'
@@ -67,11 +71,11 @@
     
 - if user.new_record? || sub_action == 'settings'
   .language.select
-    = f.label :language, t('.language'), :style => 'width: 100px; text-align: right'
+    = f.label :language, t('.language')
     = f.select :language, User::LANGUAGES
     
   .time_zone.select
-    = f.label :time_zone, t('.time_zone'), :style => 'width: 100px; text-align: right'
+    = f.label :time_zone, t('.time_zone')
     = f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, :default => "Eastern Time (US & Canada)"    
 
 - if sub_action == 'profile'
