--- a/app/views/uploads/_slot_actions.haml
+++ b/app/views/uploads/_slot_actions.haml
@@ -1,7 +1,8 @@
 %div.actionContainer
   %p.slotActions{ :style => "display: none" }
     %span
-      = destroy_page_upload_link(page, upload)
+      = link_to trash_image, project_page_upload_url(page.project, page,upload),
+        :'data-remote' => 'delete', :'data-confirm' => t('confirm.delete_upload')
       = loading_action_image("delete_upload_#{upload.id}", true)
   %p.slotActions.handle{ :style => "display: none;" }
     %span
