--- a/app/views/dividers/new.m.haml
+++ b/app/views/dividers/new.m.haml
@@ -1,5 +1,5 @@
 - form_for [@current_project,@page,@divider], :html => { :id => "new_divider_form" } do |f|
-  = page_slot_fields("new_divider_form")
+  = page_slot_fields
   .area
     = divider_fields(f)
     .submit{ :id => "divider_submit" }
