--- a/app/views/notes/_actions.haml
+++ b/app/views/notes/_actions.haml
@@ -1,8 +1,11 @@
 %p.actions{ :style => "display: none" }
   %span
-    = edit_note_link(note)
+    = link_to pencil_image, edit_project_page_note_path(note.project, note.page, note),
+        :'data-remote' => 'get'
     = loading_action_image("note_#{note.id}", true)
-    = delete_note_link(note)
+    
+    = link_to trash_image, project_page_note_path(note.project, note.page, note),
+        :'data-remote' => 'delete', :'data-confirm' => t('.delete_confirm')
     = loading_action_image("delete_note_#{note.id}", true)
 %p.actions.handle{ :style => "display: none;" }
   %span
