--- a/app/views/notes/_new.haml
+++ b/app/views/notes/_new.haml
@@ -1,5 +1,5 @@
-- form_for [project,page,note], :html => { :id => "new_note_form", :style => 'display: none' } do |f|
-  = page_slot_fields("new_note_form")
+- form_for [project,page,note], :html => { :style => 'display: none', :'data-remote' => 'true' } do |f|
+  = page_slot_fields
   = note_fields(f)
   .submit{ :id => "note_submit" }
     = f.submit t('.submit')
