fix deleting of page parts
HTTP method should be in "data-method", not "data-remote" attribute

--- a/app/views/notes/_actions.haml
+++ b/app/views/notes/_actions.haml
@@ -1,11 +1,11 @@
 %p.actions{ :style => "display: none" }
   %span
     = link_to pencil_image, edit_project_page_note_path(note.project, note.page, note),
-        :'data-remote' => 'get'
+        :'data-remote' => true
     = loading_action_image("note_#{note.id}", true)
     
     = link_to trash_image, project_page_note_path(note.project, note.page, note),
-        :'data-remote' => 'delete', :'data-confirm' => t('.delete_confirm')
+        :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm')
     = loading_action_image("delete_note_#{note.id}", true)
 %p.actions.handle{ :style => "display: none;" }
   %span
