--- a/app/views/dividers/_actions.haml
+++ b/app/views/dividers/_actions.haml
@@ -1,11 +1,11 @@
 %p.actions{ :style => "display: none" }
   %span
     = link_to pencil_image, edit_project_page_divider_path(divider.project, divider.page, divider),
-        :'data-remote' => 'get'
+        :'data-remote' => true
     = loading_action_image("delete_divider_#{divider.id}", true)
     
     = link_to trash_image, project_page_divider_path(divider.project, divider.page, divider),
-        :'data-remote' => 'delete', :'data-confirm' => t('.delete_confirm')
+        :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm')
     = loading_action_image("delete_divider_#{divider.id}", true)
     =# drag_image
 %p.actions.handle{ :style => "display: none" }
