Moving favicon to images

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,7 @@
       %meta{ :name => 'current-username', :content => current_user.login }
     = csrf_meta_tag
     = auto_discovery_link_by_context(current_user, @current_project)
-    %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
+    %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" }
     %title
       = @page_title
       Teambox
