Fix Exception in Files Tab:
ActionView::TemplateError (can't convert Float into String) on line #11 of app/views/uploads/_upload.haml:
8:       .body
9:         .file
10:           = upload_link(project,upload)
11:           = '(' + number_to_human_size(upload.size) + ')'
12:         - if upload.description
13:           .description
14:             = upload.description

--- a/app/views/uploads/_upload_slot.haml
+++ b/app/views/uploads/_upload_slot.haml
@@ -9,7 +9,7 @@
       .body
         .file
           = upload_link(project,upload_slot)
-          = '(' + number_to_human_size(upload_slot.size) + ')'
+          = "(#{number_to_human_size(upload.size)})"
         - if upload_slot.description
           .description
             = upload_slot.description
