--- a/app/views/pages/show.m.haml
+++ b/app/views/pages/show.m.haml
@@ -2,7 +2,7 @@
   %h2= @page
   .description= @page.description
 
-= #page_buttons(@current_project,@page)
+= page_buttons(@current_project,@page)
 
 .pageSlots
   #slots
