--- a/app/views/dividers/_actions.haml
+++ b/app/views/dividers/_actions.haml
@@ -1,4 +1,4 @@
-%p.actions{ :style => "display: none" }
+%p.actions
   %span
     = link_to pencil_image, edit_project_page_divider_path(divider.project, divider.page, divider),
         :'data-remote' => true
@@ -7,8 +7,6 @@
     = link_to trash_image, project_page_divider_path(divider.project, divider.page, divider),
         :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm')
     = loading_action_image("delete_divider_#{divider.id}", true)
-    =# drag_image
-%p.actions.handle{ :style => "display: none" }
+%p.actions.handle
   %span
     = drag_widget_handle(divider)
-    =# drag_image
