--- a/app/views/pages/show.m.haml
+++ b/app/views/pages/show.m.haml
@@ -8,4 +8,4 @@
   #slots
     = render :partial => 'slot', :collection => @page.slots, :locals => {:page => @page, :project => @current_project}
   
-  .pageSlot.pageFooter#page_slot_footer{:slot => -1}
+  .page_slot.pageFooter#page_slot_footer{:slot => -1}
