--- a/app/views/notes/_actions.haml
+++ b/app/views/notes/_actions.haml
@@ -1,4 +1,4 @@
-%p.actions{ :style => "display: none" }
+%p.actions
   %span
     = link_to pencil_image, edit_project_page_note_path(note.project, note.page, note),
         :'data-remote' => true
@@ -7,6 +7,6 @@
     = link_to trash_image, project_page_note_path(note.project, note.page, note),
         :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm')
     = loading_action_image("delete_note_#{note.id}", true)
-%p.actions.handle{ :style => "display: none;" }
+%p.actions.handle
   %span
     = drag_widget_handle(note)
