--- a/app/views/notes/_note.haml
+++ b/app/views/notes/_note.haml
@@ -1,5 +1,6 @@
-.note{:id => "note_#{note.id}"}
-  = note_actions_link(note)
+%div[note]
+  - if note.editable?(current_user)
+    = render 'notes/actions', :note => note
   %h3= note.name
   .textilized
     ~ note.body_html
