--- a/app/views/uploads/_slot_actions.haml
+++ b/app/views/uploads/_slot_actions.haml
@@ -1,9 +1,9 @@
 %div.actionContainer
-  %p.slotActions{ :style => "display: none" }
+  %p.slotActions
     %span
       = link_to trash_image, project_page_upload_url(page.project, page,upload),
         :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('confirm.delete_upload')
       = loading_action_image("delete_upload_#{upload.id}", true)
-  %p.slotActions.handle{ :style => "display: none;" }
+  %p.slotActions.handle
     %span
       = drag_widget_handle(upload)
