Using teambox.com instead of www.teambox.com

--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -5,5 +5,5 @@
     %li= help_link
   .copyright
     Project collaboration by
-    = link_to 'Teambox', 'http://www.teambox.com'
+    = link_to 'Teambox', 'http://teambox.com'
 
