activate the ajax spinner when editing page notes

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -235,6 +235,8 @@ form.new_note, form.edit_note
   .submit
     font-size: 12px
     padding-top: 10px
+    img.loading
+      vertical-align: middle
 
 .note
   padding-left: 16px
