--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -10,7 +10,7 @@
           - if comment.can_modify?(current_user, false)
             = image_tag('triangle.png', :class => 'triangle')
             .extra
-              - if comment.target.class == Project
+              - if comment.target.class == Project and comment.project.editable?(current_user)
                 = convert_comment_link(comment)
               - if comment.can_edit?(current_user)
                 = edit_comment_link(comment)
