--- a/app/views/pages/_buttons.m.haml
+++ b/app/views/pages/_buttons.m.haml
@@ -1,5 +1,5 @@
 .buttons#buttons
-  = "Add..."
+  %span.add= "Add..."
   = new_page_note_link(project,page)
   = new_page_divider_link(project,page)
   .clear
