--- a/app/views/notes/_actions.haml
+++ b/app/views/notes/_actions.haml
@@ -5,7 +5,7 @@
     = loading_action_image("note_#{note.id}", true)
     
     = link_to trash_image, project_page_note_path(note.project, note.page, note),
-        :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm')
+        :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm'), :class => 'widget_delete'
     = loading_action_image("delete_note_#{note.id}", true)
 %p.actions.handle
   %span
