Tweak mobile page edit styling

--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -586,11 +586,17 @@ div.pageSlots
     display: none
     a.widget_delete
       display: none
+  p.actions.handle
+    display: none
 
 div.pageSlots.edit
   p.actions
     padding-right: 4px
+    padding-left: 4px
+    background-color: white
     display: block
+  p.actions.handle
+    display: none
     
 body.show_pages,body.edit_pages
   div.page_header
