--- a/app/views/users/settings/_linked_accounts.haml
+++ b/app/views/users/settings/_linked_accounts.haml
@@ -2,7 +2,7 @@
   %p
     - if current_user.app_links.find_by_provider(provider)
       = t(:'oauth.your_account_is_linked', :provider => provider)
-      = link_to t(:'oauth.link_account'), unlink_app_path(provider.downcase)
+      = link_to t(:'oauth.unlink_account'), unlink_app_path(provider.downcase)
     - else
       = t(:'oauth.your_account_is_not_linked', :provider => provider)
-      = link_to t(:'oauth.unlink_account'), oauth_request_path(provider.downcase)
+      = link_to t(:'oauth.link_account'), oauth_request_path(provider.downcase)
