--- a/app/views/shared/_user_navigation.erb
+++ b/app/views/shared/_user_navigation.erb
@@ -18,10 +18,12 @@ render_tabnav :user do
       t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'picture'
     end
 
-    add_tab do |t|
-      t.named t('.linked_accounts')
-      t.links_to account_linked_accounts_path
-      t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'linked_accounts'
+    unless AppLink.providers.empty?
+      add_tab do |t|
+        t.named t('.linked_accounts')
+        t.links_to account_linked_accounts_path
+        t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'linked_accounts'
+      end
     end
 
     add_tab do |t|
