--- a/app/views/emailer/notify_task.haml
+++ b/app/views/emailer/notify_task.haml
@@ -8,7 +8,7 @@
     = t('emailer.notify.task_list')
     = link_to(@task_list.name, project_task_list_url(@project, @task_list))
 
-  .box{ :style => email_box }
+  .box{ :style => email_box(@task) }
     %h2{ :style => email_text(:big) }
       = t('emailer.notify.task')
       = link_to @task.name, project_task_list_task_url(@project, @task_list, @task)
