--- a/app/views/emailer/_recent_tasks.haml
+++ b/app/views/emailer/_recent_tasks.haml
@@ -1,6 +1,7 @@
-%h3{ :style => email_text(:normal) }
-  = t('emailer.notify.my_tasks', :project => project.name)
-  - for task in project.tasks.unarchived.assigned_to(@current_user).sort { |a,b| (a.due_on || 1.year.ago) <=> (a.due_on || 1.year.ago)}
+- if recent_tasks.any?
+  %h3{ :style => email_text(:normal) }
+    = t('emailer.notify.my_tasks', :project => project.name)
+  - for task in recent_tasks
     %p{ :style => email_text(:small) }
       = link_to task.name, project_task_list_task_url(project, task.task_list, task), :style => 'color: rgb(50,50,50);padding-left:15px'
       %span
