--- a/app/views/emailer/notify_task.haml
+++ b/app/views/emailer/notify_task.haml
@@ -19,7 +19,7 @@
       %p= t('emailer.notify.due_on', :date => due_on(@task))
 
   = emailer_list_comments(@task.comments)
-  = emailer_recent_tasks(@project)
+  = emailer_recent_tasks(@project, @recipient)
 
   .actions{ :style => 'font-size: 14px; color: rgb(100,100,100); padding: 15px' }
     %p= t('emailer.notify.view_online', :link => project_task_list_task_url(@project, @task_list, @task))
@@ -29,7 +29,7 @@
     %p
       = @task.watchers.to_sentence
       = t('emailer.notify.are_watching')
-
+    = emailer_commands_for_tasks(@recipient)
     %p
       = t('emailer.notify.stop_watching', :stop_watching_url => project_task_list_task_url(@project, @task_list, @task))
       = t('emailer.notify.notification_settings', :url => account_notifications_url)
