--- a/app/views/emailer/notify_task_list.haml
+++ b/app/views/emailer/notify_task_list.haml
@@ -11,7 +11,7 @@
     = link_to @task_list.name, project_task_list_url(@project, @task_list)
 
   = emailer_list_comments(@task_list.comments)
-  = emailer_recent_tasks(@project)
+  = emailer_recent_tasks(@project, @recipient)
 
   .actions{ :style => 'font-size: 14px; color: rgb(100,100,100); padding: 15px' }
     %p= t('emailer.notify.view_online', :link => project_task_list_url(@project, @task_list))
