fix a number of cucumber features and minor bugs discovered in turn
 - fix "watchable" feature by expecting the correct no. of emails
 - fix groups feature
 - fix create example feature
 - fix create project feature
 - fix file upload cucumber feature
 - fix updating user profile and related features
 - fix password reset feature

--- a/app/views/uploads/_form.haml
+++ b/app/views/uploads/_form.haml
@@ -10,9 +10,9 @@
     - unless upload.asset.errors.empty?
       %p
         - if upload.asset.errors.has_key?(:presence)
-          %span=t('.presence')
+          %span= t('.presence')
         - if upload.asset.errors.has_key?(:size)
-          %span=t('.max_size',:mb => upload.asset.errors[:size][:max])
+          %span= t('.max_size', :mb => Teambox.config.asset_max_file_size.to_i)
   .submit
     - if page
       = page_slot_fields
