Allow deletion on the mobile pages interface

--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -645,6 +645,21 @@ body.show_pages,body.edit_pages
     .actionContainer
       display: none
 
+div.submit
+  padding: 6px 10px
+  input
+    display: inline-block
+
+div.destruct_submit
+  padding: 6px 10px
+  text-align: right
+  input[type=submit]
+    display: inline-block
+    background: #F60200
+
+div.documentation
+  float: right
+
 #footer
   border-top: 1px solid #bdbfc4
   a
