--- a/app/views/notes/edit.m.haml
+++ b/app/views/notes/edit.m.haml
@@ -4,3 +4,8 @@
     = f.submit t('.submit')
     = t('common.or')
     = link_to t('common.cancel'), project_page_path(@note.project, @note.page)
+
+- form_for [@note.project,@note.page,@note], :html => {:id => "note_destroy_#{@note.id}", :method => :delete} do |f|
+  .destruct_submit
+    = t('common.or')
+    = f.submit t('common.delete')
