--- a/app/views/uploads/_upload.haml
+++ b/app/views/uploads/_upload.haml
@@ -13,7 +13,7 @@
   .reference
     = activity_title upload
 
-    - if not activity and upload.editable?(current_user)
+    - if not activity and upload.editable?(current_user) and request.format != :m
       &ndash;
       = link_to t('.remove'), [upload.project, upload], :'data-remote' => true,
           :'data-method' => 'delete', :'data-confirm' => t('confirm.delete_upload')
