Remove unused @sub_action in task lists controller. Also remove unnecessary query on tasklists#show

--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -13,12 +13,12 @@
     = task_list_form(@current_project,TaskList.new)
 
   #task_lists{:reorder_url => project_reorder_task_lists_path(@current_project)}
-    = render_task_lists(@current_project,@task_lists,@sub_action)
+    = render_task_lists(@current_project,@task_lists)
 
   = task_list_primer(@current_project, @task_lists.any?)
   
   - content_for :column do
-    = task_list_column(@current_project,@task_lists,@sub_action,@task_list)
+    = task_list_column(@current_project,@task_lists,@task_list)
 
 - else
   %h2= t('.tasks_for_all_projects')
