--- a/app/views/task_lists/index.m.haml
+++ b/app/views/task_lists/index.m.haml
@@ -6,7 +6,7 @@
       = task_list_form(@current_project,TaskList.new)
     
     #task_lists{:reorder_url => project_reorder_task_lists_path(@current_project)}
-      = render_task_lists(@current_project,@task_lists,@sub_action)
+      = render_task_lists(@current_project,@task_lists)
       .new
         = link_to t('task_lists.link.new'), new_project_task_list_path(@current_project, @task_list), :class => 'new'
   - else
