--- a/app/views/task_lists/index.print.haml
+++ b/app/views/task_lists/index.print.haml
@@ -3,7 +3,7 @@
 
   - if @task_lists.any?
     #task_lists
-      = render_task_lists(@current_project,@task_lists,@sub_action)
+      = render_task_lists(@current_project,@task_lists)
   
 - else
   %h2= t('.tasks_for_all_projects')
