Don't let timetracking span being wrapped by white space

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -204,6 +204,7 @@ form.convert_comment
     background-color: #668cd9
     +rounded(3px)
     padding: 0 3px
+    white-space: nowrap
     img
       margin-top: 6px
   span.arr
