--- a/app/views/task_lists/_task_list.html.haml
+++ b/app/views/task_lists/_task_list.html.haml
@@ -10,7 +10,7 @@
     - if show_the_lists
       .tasks.open{ :id => task_list_id(:the_main_tasks,project,task_list), :reorder_url => project_reorder_tasks_path(project,task_list) }
         - if !task_list.archived
-          = list_tasks(task_list.tasks.unarchived,task_list_editable?(task_list,current_user))
+          = list_tasks(task_list,task_list.tasks.unarchived,task_list_editable?(task_list,current_user))
       - if task_list_editable?(task_list,current_user)
         .new_task
           = task_link(project,task_list)
@@ -21,7 +21,7 @@
       .task_list_closed{ :id => task_list_id(:with_closed_tasks,project,task_list) }
         .tasks.closed{ :id => task_list_id(:the_closed_tasks,project,task_list) }
           - if !header_on_index
-            = list_tasks(task_list.tasks.archived,task_list_editable?(task_list,current_user))
+            = list_tasks(task_list,task_list.tasks.archived,task_list_editable?(task_list,current_user))
         - if header_on_index and task_list.tasks.archived.size > 0
           .show_archived_tasks
             = loading_image(task_list_id(:archived_tasks_loading,project,task_list))
