--- a/app/views/task_lists/feed.haml
+++ b/app/views/task_lists/feed.haml
@@ -1,5 +1,5 @@
 -content_for :column do
-=task_list_column(@current_project,@task_lists,@task_list)
+=task_list_column(@current_project,@task_list)
 
 - unless @task_lists.empty?
   #activities
