--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -18,7 +18,7 @@
   = task_list_primer(@current_project, @task_lists.any?)
   
   - content_for :column do
-    = task_list_column(@current_project,@task_lists,@task_list)
+    = task_list_column(@current_project,@task_list)
 
 - else
   %h2= t('.tasks_for_all_projects')
