--- a/app/views/task_lists/show.html.haml
+++ b/app/views/task_lists/show.html.haml
@@ -7,4 +7,4 @@
   = list_comments(@task_list.comments,@task_list)
 
 - content_for :column do
-  = task_list_column(@current_project,@task_lists,@task_list)
+  = task_list_column(@current_project,@task_list)
