--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -1,5 +1,5 @@
 = render_task(@current_project,@task_list,@task,@comment)
 
 - content_for :column do
-  = task_list_column(@current_project,@task_lists,@task)
+  = task_list_column(@current_project,@task)
     
