Not requiring a permalink when creating a project

--- a/app/styles/_base.sass
+++ b/app/styles/_base.sass
@@ -26,6 +26,8 @@ div.fieldWithErrors
   display: inline
   font-weight: normal
   color: red
+  label
+    color: black
 
 .index_task_lists, .show_projects
   .banner
