--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -6,6 +6,7 @@
   em, i
     margin-left: 10px
     font-size: 10px
+    font-weight: normal
     font-style: normal
     color: #999
 
@@ -77,8 +78,8 @@ form
 
   .fieldWithErrors
     input
-      background: rgb(255, 200, 200)
-      border: 1px red solid
+      background: rgb(255, 230, 230)
+      border: 1px rgb(200, 100, 100) solid
 
   .form_error
     border: 1px red solid	
