--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,7 +1,6 @@
 %h2= t('.title')
 
-%p.new_example_project
-  = t('.create_an_example_project', :link => new_example_project_path)
+- #%p.new_example_project= t('.create_an_example_project', :link => new_example_project_path)
 
 - form_for @project do |f|
   = project_fields(f,@project)
