--- a/app/views/shared/_javascripts.erb
+++ b/app/views/shared/_javascripts.erb
@@ -6,3 +6,4 @@
 %>
 <%= javascript_tag("_translations = {'OK':'OK','Now':'Now','Today':'Today'}; Date.months = $w('January February March April May June July August September October Novemeber'); "); %>
 <%= javascript_tag("new PeriodicalExecuter(format_posted_date_#{I18n.locale}, 30); Comment.watch_edit(); "); %>
+<%= javascript_tag("AppConfig = new Object(); AppConfig.project_permalink_min_length = #{APP_CONFIG['project_permalink_min_length']};"); %>
