Fixing print layout for tasks

--- a/app/styles/print.sass
+++ b/app/styles/print.sass
@@ -45,6 +45,10 @@ img.drag
     text-align: left
     span.actiondate
       color: #afafaf
+      float: right
+    border-bottom: 1px solid #999
+    margin-bottom: 5px
+    font-weight: bold
   .task
     .taskStatus
       display: none
