Implementing invitations on Project#create
You can invite users by their emails or with checkboxes

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -4,6 +4,9 @@
       font-size: 12px
       margin-left: 10px
       height: 30px
+    .invitations_pending
+      margin: 10px 0 5px 10px
+      font-weight: bold
     .invite_people
       margin-top: 10px
     .person
@@ -134,6 +137,28 @@ form#new_project
   margin: 30px 0
   .errors_for
     font-size: 12px
+  .text_field
+    margin-bottom: 20px
+  .invite_contacts
+    margin-top: 30px
+    font-size: 12px
+    h3
+      font-size: 14px
+      margin:
+        top: 7px
+        bottom: 10px
+    .users
+      margin-left: 10px
+      .user
+        float: left
+        width: 190px
+    p
+      margin: 15px 0 5px
+    textarea
+      width: 550px
+      height: 40px
+      font-size: 12px
+      margin: 0
   .submit
     margin-top: 20px
 
