--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,11 +1,23 @@
 %h2= t('.title')
 
-- #%p.new_example_project= t('.create_an_example_project', :link => new_example_project_path)
-
 - form_for @project do |f|
   = project_fields(f,@project)
+
+  - contacts = current_user.contacts
+  .invite_contacts
+    %h3= t('.invite_people')
+    - if contacts.any?
+      .users
+        - for user in contacts[0,60]
+          .user
+            = user_checkbox(user, false)
+    .clear
+    %p= t('.invite_by_email')
+    = text_area_tag :invite_emails, params[:invite_emails], :placeholder => "john@galt.com, francisco@danconia.com"
+  
   .submit
     = f.submit t('.submit')
   
 - content_for :column do
+  %p.new_example_project= t('.create_an_example_project', :link => new_example_project_path)
   = project_new_primer
