--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -20,6 +20,9 @@
   .people_list
     %h2= t '.people_in_project'
     = list_users_statuses(@current_project.users)
+    - if @current_project.invitations.count > 0
+      .invitations_pending
+        = link_to t('.pending_invitations', :count => @current_project.invitations.count), project_people_path(@current_project)
     .invite_people
       = link_to "+ #{t('.invite_people')}", project_people_path(@current_project)
   - if @current_project.users.size > 1
