--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -22,6 +22,7 @@ form#new_comment
     textarea
       width: 626px
       margin-bottom: 0px
+      font-size: 13px
     .previewBox
       margin: 4px
       padding: 4px
