--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -641,6 +641,7 @@ body.show_pages,body.edit_pages
   div.upload
     .block
       .date
+        float: none
         margin-right: 4px
     .actionContainer
       display: none
