--- a/app/views/uploads/_upload_slot.haml
+++ b/app/views/uploads/_upload_slot.haml
@@ -1,1 +1,20 @@
-= render 'uploads/upload', :object => upload_slot, :activity => false
+.upload{ :id => "upload_#{upload_slot.id}" }
+  = page_upload_actions_link(page,upload_slot)
+  .info
+    = link_to upload_slot.file_type, upload_slot.url, :class => upload_slot.file_type, :rel => (upload_slot.image? ? 'facebox' : '')
+  .block
+    .filename.show_details
+      .body
+        .file
+          = link_to_upload(upload_slot, upload_slot.file_name)
+          = '(' + number_to_human_size(upload_slot.size) + ')'
+        - if upload_slot.description
+          .description
+            = upload_slot.description
+        .reference
+          = t('uploads.upload.uploaded_by')
+          = user_link(upload_slot.user)
+          = activity_comment_target_link(upload_slot.comment, t('uploads.upload.on_')) if upload_slot.comment
+          .date
+            = posted_date upload_slot.created_at
+  .clear
