Use icons for uploads

--- a/app/styles/_uploads.sass
+++ b/app/styles/_uploads.sass
@@ -13,6 +13,9 @@ $upload_icon_width: 48px
     width: $upload_icon_width
     margin-left: -$upload_icon_width - 10px
     float: left
+    .file_icon
+      background: #ffffff
+      padding: 0
     a
       display: block
       text-align: center
