Fix creating uploads on pages. Also add some basic error handling on failed uploads.

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -270,6 +270,8 @@ form.new_note, form.edit_note
     div.info
       margin-left: 15px
       margin-right: 8px
+    div.block
+      float: left
     div.reference
       .date
         float: none
