--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -640,6 +640,7 @@ body.show_pages,body.edit_pages
       padding: 2px
   div.upload
     .block
+      float: left
       .date
         float: none
         margin-right: 4px
