Threaded activities in Projects#index and Projects#show

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -19,12 +19,15 @@
               - if comment.can_destroy?(current_user)
                 = delete_comment_link(comment)
       .name
-        = activity_title(comment)
+        - if defined?(threaded)
+          = link_to(comment.user.name, comment.user)
+        -else
+          = activity_title(comment)
         - if comment.target_type == 'Task'
           = comment_task_status(comment)
         - if comment.hours?
           %span.hours= friendly_hours_value(comment.hours)
-        = activity_project_link(comment.project) unless comment.target.is_a? Project
+        = activity_project_link(comment.project) unless defined?(threaded) || comment.target.is_a?(Project)
       .body.textilized
         ~ comment.body_html
       - if comment.uploads.any?
